# msif-isac

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: dronerf.yaml  fmcw.yaml  xiangyu.yaml
docs/: datasets.md
scripts/: make_figures.py  run_fft_baselines.py  run_grand_cv.py  run_hyperparameter_sweep.py  run_lofo_audit.py
src/msif_isac/: __init__.py  metrics.py  thresholds.py
src/msif_isac/baselines/: __init__.py  fft_features.py
src/msif_isac/data/: __init__.py  dronerf.py  fmcw.py  xiangyu.py
src/msif_isac/eval/: __init__.py  grand_cv.py  lofo.py  loso.py
src/msif_isac/neurons/: __init__.py  baseline.py  chirp.py  db.py  dual_tau.py  gabor.py  phase.py
tests/: test_baselines.py  test_metrics.py  test_neurons.py  test_thresholds.py
